--- a/InfoTechSecretary.Worker/appsettings.json
+++ b/InfoTechSecretary.Worker/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "InfoTechSecretaryContext": "Host=localhost;Database=InfoTechSecretary;Username=postgres;Password=1234"
   }
 }
