✨ :sparkles: add DiscordNotificationService and TranslatorService
💫 :dizzy: Add DiscordNotificationService and TranslatorService to the service provider in ServiceProvider.cs.

--- a/InfoTechSecretary.Core/InfoTechSecretary.Core.csproj
+++ b/InfoTechSecretary.Core/InfoTechSecretary.Core.csproj
@@ -8,8 +8,10 @@
 
     <ItemGroup>
         <PackageReference Include="AngleSharp" Version="1.0.7"/>
+        <PackageReference Include="Discord.Net.Webhook" Version="3.13.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0"/>
+        <PackageReference Include="Rystem.OpenAi" Version="3.3.11" />
     </ItemGroup>
 
     <ItemGroup>
